--- a/OBENGKU-WEB/index.html
+++ b/OBENGKU-WEB/index.html
@@ -59,8 +59,8 @@
         </div>
     <a type="button" class="btn btn-warning btn-lg btn1 fade-left fade-ani btn_login" style="margin-left:25%; " href="daftar.html">DAFTAR</a>
     <a type="button" class="btn btn-outline-warning btn1 fade-right fade-ani btn_login" style="margin-left:5%;" href="login.php">LOGIN</a>
-
 </div>
+
 
 <div class=" card-body  box_txt">
     <!-- kotak silver -->
@@ -100,37 +100,82 @@
     remove the background-attachment property to remove the scrolling effect.</p>
 </div>
 <!-- paralax2 -->
+
 <div class="parallax2">
 </div>
+<div class=" card-body  box_txt">
+    <!-- kotak silver -->
+    <div class="row ">
+        <div class="col-sm fade-left fade-ani" style="margin-left:5%">
+            <div class="card " style="width:85%;height:95%;">
+                <img class="card-img-top" src="assets/img/diagnosa.jpg">
+                <div class="card-body">
+                    <h4 class="card-title text-center" style="font-size:20px;color: black">Injection Diagnosa Tool</h4>
 
-<div class=" card-body box_txt ">
-    <p class="  fade-left fade-ani">Scroll Up and Down this page to see the parallax scrolling effect. This div is just here to enable scrolling. Tip: Try to
-    remove the background-attachment property to remove the scrolling effect.</p>
-    <img src="assets/img/p2.jpg" class="rounded fade-left fade-ani" alt="Cinque Terre" width="304" height="236">
-    <img src="assets/img/p2.jpg" class="rounded fade-left fade-ani" alt="Cinque Terre" width="304" height="236">
+                </div>
+            </div>
+        </div>
+        <div class="col-sm fade-left fade-ani">
+            <div class="card " style="width:85%;height:95%;">
+                <img class="card-img-top" src="assets/img/service.jpg">
+                <div class="card-body">
+                    <h4 class="card-title text-center" style="font-size:20px;color: black">Service</h4>
+
+
+                </div>
+            </div>
+        </div>
+        <div class="col-sm fade-left fade-ani">
+            <div class="card " style="width:85%;height:95%;">
+                <img class="card-img-top" src="assets/img/tips.jpg">
+                <div class="card-body">
+                    <h4 class="card-title text-center" style="font-size:20px;color: black">Tips</h4>
+
+
+                </div>
+            </div>
+        </div>
+
+    </div>
     </div>
 
+<!-- paralax3 -->
 
-<!-- percobaan scrool -->
+<div class="parallax3"></div>
+<div class=" card-body  box_txt">
+    <!-- kotak silver -->
+    <div class="row ">
+        <div class="col-sm fade-left fade-ani" style="margin-left:5%">
+            <div class="card " style="width:85%;height:95%;">
+                <img class="card-img-top" src="assets/img/tp_logo.png">
+                <div class="card-body">
+                    <h4 class="card-title text-center" style="font-size:20px;color: black">Injection Diagnosa Tool</h4>
+
+                </div>
+            </div>
+        </div>
+        <div class="col-sm fade-left fade-ani">
+            <div class="card " style="width:85%;height:95%;">
+                <img class="card-img-top" src="assets/img/bl_logo.png">
+                <div class="card-body">
+                    <h4 class="card-title text-center" style="font-size:20px;color: black">Service</h4>
 
 
-<h1>scrool to show the effect</h1>
-<div1 class="fade-left fade-ani">
-    <p>
-        Loirem ipsum is simply dummy text. Loirem ipsum is simply dummy text. Loirem ipsum is simply dummy text. Loirem ipsum is
-        simply dummy text.
-    </p>
-</div>
-
-<div1 class="fade-up fade-ani">
-    <p>
-        Loirem ipsum is simply dummy text. Loirem ipsum is simply dummy text. Loirem ipsum is simply dummy text. Loirem ipsum is
-        simply dummy text.
-    </p>
-</div>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm fade-left fade-ani">
+            <div class="card " style="width:85%;height:95%;">
+                <img class="card-img-top" src="assets/img/olx_logo.png">
+                <div class="card-body">
+                    <h4 class="card-title text-center" style="font-size:20px;color: black">Tips</h4>
 
 
+                </div>
+            </div>
+        </div>
 
+    </div>
 
 
 
