--- a/OBENGKU-WEB/dashboard.html
+++ b/OBENGKU-WEB/dashboard.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 	<title></title>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" media="screen" href="assets/css/bootstrap.css"/>
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.10/angular.min.js"></script>
 	<!-- <link rel="stylesheet" type="text/css" href="E:\kuliah\semester 4\web\final project\login\Chart.js"> -->
-	<script src="assets/js/jquery-3.3.1.min.js" type="text/javascript"></script>
+	<script src="assets/js/jquery.min.js" type="text/javascript"></script>
 	<script src="assets/js/Chart.min.js" type="text/javascript"></script>
 
 	<style type="text/css">
@@ -109,16 +109,38 @@
 		{
 			font-family: clarendon blk bt;
 		}
+		.logo
+		{
+			width: 200px;
+			height: 70px;
+			margin-top: 10px;
+		}
+		.header
+		{
+			background-color: orange;
+			width: all;
+			height: 90px;
+			margin-bottom: 10px;
+		}
 	</style>
 </head>
 <body>
-	<div class="kotak1">
-		<div class="bundar"></div>
-		<input type="button" name="a" value="q" class="button btn-danger btn-lg">
-		<input type="button" name="a" value="q" class="button btn-danger btn-lg">
-		<input type="button" name="a" value="q" class="button btn-danger btn-lg">
-		<input type="button" name="a" value="q" class="button btn-danger btn-lg">
-	</div>
+<div class="row-1">
+	<header class="header">
+		<div class="col">
+			<div>
+				<img src="assets/img/logo.png" class="logo">
+			</div>
+		</div>
+	</header>
+</div>
+<div class="kotak1">
+	<div class="bundar"></div>
+	<input type="button" name="a" value="q" class="button btn-danger btn-lg">
+	<input type="button" name="a" value="q" class="button btn-danger btn-lg">
+	<input type="button" name="a" value="q" class="button btn-danger btn-lg">
+	<input type="button" name="a" value="q" class="button btn-danger btn-lg">
+</div>
 	<div class="kotak2 container">
 				<h1 class="font"> <CENTER> DASHBOARD </CENTER></h1>
 				<br>				
