update tool injection & logo

--- a/OBENGKU-WEB/index.html
+++ b/OBENGKU-WEB/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0,  shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Mr Bengkel</title>
+    <link rel="icon" href="assets/img/icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/bootstrap.css" />
 
@@ -60,13 +61,18 @@
 </div>
 </div>
 </div>
+</div>
+</div>
 
 
 <div class=" jumbotron jumbotron-fluid" style=" background-color:#747271; margin-bottom: -4%  ">
     <div class="container-fluid  ">
+        <h2 class=" fade-left fade-ani font-weight-bold text-center" style="color: white; margin-top: -3rem; font-family: sans-serif" >
+           LAYANAN KAMI
+        </h2>
     <!-- kotak silver -->
     <div class="row " >
-        <p class=" fade-left fade-ani text-center">Scroll Up and Down this page .</p>
+    
         <div class="col-sm fade-left fade-ani" style="margin-left:5%">
             <div class="card " style="width:85%;height:95%;">
                 <img class="card-img-top" src="assets/img/diagnosa.jpg">
@@ -107,20 +113,21 @@
 </div>
 <div class=" jumbotron jumbotron-fluid" style=" background-color:#747271; margin-bottom: -4%  ">
     <div class="container-fluid  ">
+        <p class=" fade-left fade-ani  font-weight-bold text-center" style="color: white;font-size: 25px; margin-top: -3rem;font-family: sans-serif">UPDATE OTOMOTIF</p>
         <!-- kotak silver -->
         <div class="row ">
             <div class="col-sm fade-left fade-ani" style="margin-left:5%">
                 <div class="card " style="width:85%;height:95%;">
-                    <img class="card-img-top" src="assets/img/service.jpg">
+                    <img class="card-img-top" src="assets/img/mobil_br.png">
                     <div class="card-body">
-                        <h4 class="card-title text-center" style="font-size:20px;color: black">Injection Diagnosa Tool</h4>
+                        <h4 class="card-title text-center" style="font-size:20px;color: black">Berita Mobil Terbaru</h4>
 
                     </div>
                 </div>
             </div>
             <div class="col-sm fade-left fade-ani">
                 <div class="card " style="width:85%;height:95%;">
-                    <img class="card-img-top" src="assets/img/diagnosa.jpg">
+                    <img class="card-img-top" src="assets/img/motor_br.png">
                     <div class="card-body">
                         <h4 class="card-title text-center" style="font-size:20px;color: black">Service</h4>
 
@@ -130,14 +137,14 @@
             </div>
             <div class="col-sm fade-left fade-ani">
                 <div class="card " style="width:85%;height:95%;">
-                    <img class="card-img-top" src="assets/img/tips.jpg">
+                    <img class="card-img-top" src="assets/img/sparepart_br.png">
                     <div class="card-body">
                         <h4 class="card-title text-center" style="font-size:20px;color: black">Tips</h4>
 
 
                     </div>
                 </div>
-            </div><p class=" fade-left fade-ani text-center" style="color: white;font-size: 25px">Scroll Up and Down this page .</p>
+            </div>
             </div>
             </div>
         </div>
