--- a/OBENGKU-WEB/index.html
+++ b/OBENGKU-WEB/index.html
@@ -47,11 +47,11 @@
         <div class="row">
             <div class="col-2"></div>
                 <div class="col-9  caption">
-                    <h4 class="fade-right fade-ani text-center" style="color: white;top:2cm ;font-size: 54px;font-family:Arial, Helvetica, sans-serif">
+                    <!-- <h4 class="fade-right fade-ani text-center" style="color: white;top:2cm ;font-size: 54px;font-family:Arial, Helvetica, sans-serif">
                         MARI BERGABUNG MENJADI MITRA KAMI
-                    </h4    >
+                    </h4    > -->
                     </div>
-            <div class="col">
+            <div class="col" style="margin-top: 7rem">
                 <a type="button" class="btn btn-warning btn-lg btn1 fade-left fade-ani btn_login" style="margin-left:25%; " href="daftar.html">DAFTAR</a>
                 <a type="button" class="btn btn-outline-warning btn1 fade-right fade-ani btn_login" style="margin-left:5%;" href="login.php">LOGIN</a>
             </div>
@@ -75,7 +75,7 @@
     
         <div class="col-sm fade-left fade-ani" style="margin-left:5%">
             <div class="card " style="width:85%;height:95%;">
-                <img class="card-img-top" src="assets/img/diagnosa.jpg">
+                <a href="diagnosa.html"><img class="card-img-top" src="assets/img/diagnosa.jpg"></img></a>
                 <div class="card-body">
                     <h4 class="card-title text-center" style="font-size:20px;color: black">Injection Diagnosa Tool</h4>
                     
