--- a/OBENGKU-WEB/dashboard.html
+++ b/OBENGKU-WEB/dashboard.html
@@ -3,7 +3,7 @@
 <head>
 	<title></title>
 	<link rel="stylesheet" type="text/css" media="screen" href="assets/css/bootstrap.css"/>
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.10/angular.min.js"></script>
+	<script type="text/javascript" src="assets/js/angular.min.js"></script>
 	<!-- <link rel="stylesheet" type="text/css" href="E:\kuliah\semester 4\web\final project\login\Chart.js"> -->
 	<script src="assets/js/jquery.min.js" type="text/javascript"></script>
 	<script src="assets/js/Chart.min.js" type="text/javascript"></script>
