--- a/OBENGKU-WEB/diagnosa.html
+++ b/OBENGKU-WEB/diagnosa.html
@@ -248,10 +248,10 @@
             <div class="form-group col-6 float-left">
                 <form id="rr">
                     <label for="inputPassword2" class="sr-only">Password</label>
-                    <input required type="text" class="form-control text-center " id="pendek" placeholder=" Beam Pendek">
+                    <input  type="text" class="form-control text-center " id="pendek" placeholder=" Beam Pendek"required>
                     <br>
                     <label for="inputPassword2" class="sr-only">Password</label>
-                    <input  required type="text" class="form-control text-center"id="panjang" placeholder=" Beam Panjang">
+                    <input   type="text" class="form-control text-center"id="panjang" placeholder=" Beam Panjang" required>
                 </form>
             
                 <button class="btn btn btn-outline-warning " style="margin-left: 25%" onclick=" hitung ();ket();poto(); loading();">diagnosa</button>
