--- a/OBENGKU-WEB/dashboard.html
+++ b/OBENGKU-WEB/dashboard.html
@@ -158,6 +158,7 @@
 		{
 			width: 200px;
 			height: 50px;
+			margin-bottom: 30px;
 		}
 		.greydout {
   			-webkit-opacity: 0.25;
@@ -184,10 +185,10 @@
 <div class="bg">
 <div class="kotak1 rounded">
 	<div class="bundar"></div>
-	<button type="button" class="btn btn-dark bton" data-toggle="modal" data-target="#myModal">BIODATA</button> <br>
-	<button type="button" class="btn btn-dark bton" data-toggle="modal" data-target="#myModal">RATING</button><br>
-	<button type="button" class="btn btn-dark bton" data-toggle="modal" data-target="#myModal">LOKASI</button><br>
-	<button type="button" class="btn btn-dark bton" data-toggle="modal" data-target="#myModal">KONTAK</button><br>
+	<button type="button" class="btn btn-dark bton" data-toggle="modal" data-target="#myModal">BIODATA</button>
+	<button type="button" class="btn btn-dark bton" data-toggle="modal" data-target="#myModal">RATING</button>
+	<button type="button" class="btn btn-dark bton" data-toggle="modal" data-target="#myModal">LOKASI</button>
+	<button type="button" class="btn btn-dark bton" data-toggle="modal" data-target="#myModal">KONTAK</button>
 </div>
 	<div class="kotak2 container">
 				<h1 class="font"> <CENTER> DASHBOARD </CENTER></h1>
