--- a/OBENGKU-WEB/daftar.html
+++ b/OBENGKU-WEB/daftar.html
@@ -250,7 +250,7 @@
 							<input type="submit" name="submit" class="submit btn-warning" value="submit" href="https://facebook.com" alert="Your Registration Success">
 							<br>
 							<h7>Sudah mempunyai akun? Login
-								<a href="login.php" class="card-link"> disini </a>
+								<a href="login.html" class="card-link"> disini </a>
 							</h7>
 							<br>
 							<h7 style="margin-left: 130px;">or</h7>
