--- a/OBENGKU-WEB/dashboard.html
+++ b/OBENGKU-WEB/dashboard.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
-	<link rel="stylesheet" type="text/css" media="screen" href="assets/css/bootstrap.css"/>
-	<script src="assets/css/home_fix.css"></script>
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.10/angular.min.js"></script>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0,  shrink-to-fit=no">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>Dashboard</title>
+	<link rel="icon" href="assets/img/icon.png">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" media="screen" href="assets/css/bootstrap.css" />
+	
+	<link rel="stylesheet" href="assets\css\home_fix.css">
+	<!-- <script src="//code.jquery.com/jquery-latest.min.js" type="text/javascript"></script> -->
+	<script src="assets\js\jquery-3.3.1.min.js"></script>
+	<script src="assets\js\bootstrap.min.js"></script>
+	<script src="assets\js\fade.js"></script>
+	<script class="cssdeck" src="assets\js\jquery.min.js"></script>
 
-	<script type="text/javascript" src="assets/js/angular.min.js"></script>
-	<!-- <link rel="stylesheet" type="text/css" href="E:\kuliah\semester 4\web\final project\login\Chart.js"> -->
 	<script src="assets/js/jquery.min.js" type="text/javascript"></script>
 	<script src="assets/js/Chart.min.js" type="text/javascript"></script>
 	<script src="assets/js/bootstrap.min.js"></script>
@@ -17,7 +25,7 @@
 		.kotak1
 		{
 			width: 300px;
-			height: 622px;
+			height: 910px;
 			background-color: orange;
 			display: flex;
 			flex-direction: column;
@@ -173,15 +181,44 @@
 	</style>
 </head>
 <body>
-<div class="row-1">
-	<header class="header">
-		<div class="col">
-			<div>
-				<img src="assets/img/logo.png" class="logo">
-			</div>
+
+<div class="navbar-full">
+	<nav class="navbar navbar-expand-md navbar-dark" style="background-color:#fdd100">
+		<a class="navbar-brand" style="color: white" href="index.html">
+			<img class="logo1" src="assets/img/logo.png">
+		</a>
+		<button class="navbar-toggler" style="" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse " id="collapsibleNavbar">
+			<ul class="navbar-nav" style="">
+				<li class="nav-item warna ">
+					<a class="nav-link " href="index.html">HOME</a>
+				</li>
+				<li class="nav-item warna">
+					<a class="nav-link" href="index.html">SERVICE</a>
+				</li>
+				<li class="nav-item warna">
+					<a class="nav-link" href="#">CONTACT</a>
+				</li>
+				<li class="nav-item warna">
+					<a class="nav-link" href="#">ABOUT</a>
+				</li>
+				<li class="col">
+					<a class="nav-link" href="#"> </a>
+				</li>
+				<li class="col">
+					<a class="nav-link" href="#"> </a>
+				</li>
+			</ul>
+
 		</div>
-	</header>
-</div>
+	</nav>
+
+
+
+
+
 <div class="bg">
 <div class="kotak1 rounded">
 	<div class="bundar"></div>
@@ -190,11 +227,11 @@
 	<button type="button" class="btn btn-dark bton" data-toggle="modal" data-target="#myModal">LOKASI</button>
 	<button type="button" class="btn btn-dark bton" data-toggle="modal" data-target="#myModal">KONTAK</button>
 </div>
-	<div class="kotak2 container">
+	<div class="kotak2 container-fluid">
 				<h1 class="font"> <CENTER> DASHBOARD </CENTER></h1>
 				<br>				
 				<div class="row">
-								<div class="col-2">
+								<div class="col-2"><h4 style="margin-left: 5rem"><b>PERFORMA</b></h4>
 									<div class="chart">
 										<canvas id="pieChart"></canvas>
 										<script type="text/javascript">
@@ -244,7 +281,7 @@
 									</div>
 								</div>
 
-								<div class="col-4">
+								<div class="col-4"><h4 class="text-center" style="margin-left: 2rem"><b>PENDAPATAN</b></h4>
 									<div class="chart">
 									<canvas id="pieChart2"></canvas>
 										<script type="text/javascript">
@@ -252,13 +289,13 @@
 										    var pieChart = new Chart(pieChartCanvas);
 										    var PieData = [
 										      {
-										        value: 90,
+										        value: 65,
 										        color: "#DC143C",
 										        highlight: "#DC143C",
 										        label: "Red"
 										      },
 										      {
-										        value: 10,
+										        value: 35,
 										        color: "#696969",
 										        highlight: "#696969",
 										        label: "Green"
@@ -329,13 +366,28 @@
 									<div class="clear"></div> 
 								</div>
 							</div>
-							</div>
-				<div class="row" style=" margin-left: 13%">
-				 	<div class="col gambar1 rounded"></div>
-				 	<div class="col gambar2 rounded"></div>
-				 	<div class="col gambar3 rounded"></div>
-				 	<div class="col gambar4 rounded"></div>
-				</div>											
+							</div>	
+									
+<div class="container-fluid" style="margin-top:-5rem">
+	<div class=" row">
+	
+			<img class=" col-md-3  img-thumbnail" src="assets/img/diagnosa.jpg" id="potos" style="height: 75%;"></img>
+			<img class=" col-md-3  img-thumbnail" src="assets/img/diagnosa.jpg" id="potos2" style="height: 75%;"></img>
+			<img class=" col-md-3  img-thumbnail" src="assets/img/diagnosa.jpg" id="potos3" style="height: 75%;"></img>
+			<img class=" col-md-3  img-thumbnail" src="assets/img/diagnosa.jpg" id="potos3" style="height: 75%;"></img>
+			<img class=" col-md-3  img-thumbnail" src="assets/img/diagnosa.jpg" id="potos3" style="height: 75%;"></img>
+			<img class=" col-md-3  img-thumbnail" src="assets/img/diagnosa.jpg" id="potos3" style="height: 75%;"></img>
+			<img class=" col-md-3  img-thumbnail" src="assets/img/diagnosa.jpg" id="potos3" style="height: 75%;"></img>
+			<img class=" col-md-3  img-thumbnail" src="assets/img/diagnosa.jpg" id="potos3" style="height: 75%;"></img>
+
+
+			
+	</div>
+</div>
+
+
+
+																	
 	</div>
 </div>
 <div class="modal fade" id="myModal" role="dialog">
@@ -363,8 +415,8 @@
 
 
 
-<div class="footer" style=" background-color:#474443;margin-top: -2rem">
-	<div class="container-fluid">
+<div class="footer" style=" background-color:#474443;margin-top: 10rem">
+	<div class="container-fluid" style=" background-color:#474443;">
 		<div class="row">
 			<div class="col-3">
 				<img src="assets/img/logo_footer.png" style="width:50vh; height:15vh;"></img>
