--- a/OBENGKU-WEB/index.html
+++ b/OBENGKU-WEB/index.html
@@ -29,7 +29,7 @@
                     <a class="nav-link " href="#">HOME</a>
                 </li>
                 <li class="nav-item warna">
-                    <a class="nav-link" href="#">SERVICE</a>
+                    <a class="nav-link" href="#layanan">SERVICE</a>
                 </li>
                 <li class="nav-item warna">
                     <a class="nav-link" href="#">CONTACT</a>
@@ -42,32 +42,31 @@
 
             <!-- paralax pertama -->
 <div class="card-body parallax">
-    <div class=" jumbotron jumbotron-fluid" style="background-color:transparent">
+    <div class=" jumbotron jumbotron-fluid" style="background-color:transparent" >
         <div class="container-fluid  ">
         <div class="row">
             <div class="col-2"></div>
                 <div class="col-9  caption">
-                    <!-- <h4 class="fade-right fade-ani text-center" style="color: white;top:2cm ;font-size: 54px;font-family:Arial, Helvetica, sans-serif">
-                        MARI BERGABUNG MENJADI MITRA KAMI
-                    </h4    > -->
-                    </div>
+                   
             <div class="col" style="margin-top: 7rem">
-                <a type="button" class="btn btn-warning btn-lg btn1 fade-left fade-ani btn_login" style="margin-left:25%; " href="daftar.html">DAFTAR</a>
-                <a type="button" class="btn btn-outline-warning btn1 fade-right fade-ani btn_login" style="margin-left:5%;" href="login.php">LOGIN</a>
+                <div class="card-group">
+                 <a class="btn btn-warning btn-lg btn1 fade-left fade-ani  btn_login " style="margin-left:8%; " href="daftar.html">DAFTAR</a>
+                <a class="btn btn-outline-warning btn1 fade-right fade-ani  btn_login" style="margin-left:5%;" href="login.html"   id="layanan" >MASUK</a>
             </div>
         </div>
+        </div>
+    </div>
+    </div>
+</div>
+</div>
+
    
-</div>
-</div>
-</div>
-</div>
-</div>
 </div>
 
 
 <div class=" jumbotron jumbotron-fluid" style=" background-color:#747271; margin-bottom: -4%  ">
     <div class="container-fluid  ">
-        <h2 class=" fade-left fade-ani font-weight-bold text-center" style="color: white; margin-top: -3rem; font-family: sans-serif" >
+        <h2 class=" fade-left fade-ani font-weight-bold text-center" style="color: white; margin-top: -3rem; font-family: sans-serif">
            LAYANAN KAMI
         </h2>
     <!-- kotak silver -->
@@ -84,7 +83,7 @@
             </div>
                 <div class="col-sm fade-left fade-ani">
                         <div class="card " style="width:85%;height:95%;">
-                            <img class="card-img-top" src="assets/img/service.jpg">
+                            <a href="maps.html">    <img class="card-img-top" src="assets/img/service.jpg"></img></a>
                             <div class="card-body">
                                 <h4 class="card-title text-center" style="font-size:20px;color: black">SERVICE</h4>
                                 
@@ -127,7 +126,7 @@
             </div>
             <div class="col-sm fade-left fade-ani">
                 <div class="card " style="width:85%;height:95%;">
-                    <img class="card-img-top" src="assets/img/motor_br.png">
+                    <img class="card-img-top" src="assets/img/motor_br.jpg">
                     <div class="card-body">
                         <h4 class="card-title text-center" style="font-size:20px;color: black">Berita Motor Terbaru</h4>
 
