update angular fiture and fix bug

--- a/OBENGKU-WEB/login.html
+++ b/OBENGKU-WEB/login.html
@@ -15,7 +15,7 @@
 <script src="assets\js\fade.js"></script>
 <script class="cssdeck" src="assets\js\jquery.min.js"></script> 
 <script src='https://www.google.com/recaptcha/api.js'></script>
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+	<script src="assets\js\angular.min.js"></script>
 	<style type="text/css">
 			.kotak
 			{
