--- a/OBENGKU-WEB/daftar.html
+++ b/OBENGKU-WEB/daftar.html
@@ -178,8 +178,9 @@
 
 					<form ng-app="" name="myForm" onsubmit="return validateForm()" method="post" class="kotak row">
 						<img class="kotak2 rounded-left col-xs-2"></img>
+						<img src="assets/img/logo_footer.png" style="height: 80px; margin-top:-6rem; margin-bottom: 2rem; margin-right:4rem"></img>
 						<div class="col-6">
-							<h4 class="center-block">SIGN UP/MENDAFTAR</h4>
+							<h4 class="center-block"><b>SIGN UP/MENDAFTAR</b></h4>
 							<input type="text" name="username" ng-model="myText1" placeholder="| Username" class="username form-control" required>
 							<input type="text" name="email" ng-model="myText2" placeholder="| E-mail" class="username form-control" required >
 <!-- 														
