update fitur service

--- a/OBENGKU-WEB/dashboard.html
+++ b/OBENGKU-WEB/dashboard.html
@@ -237,7 +237,7 @@
 	<button type="button" class="btn btn-dark bton" data-toggle="modal" data-target="#myModal">KONTAK</button>
 </div>
 	<div class="kotak2 container-fluid">
-				<h1> <CENTER> DASHBOARD </CENTER></h1>
+				<h1> <CENTER><b> DASHBOARD </b></CENTER></h1>
 				<br>				
 				<div class="row">
 								<div class="col-2"><h4 style="margin-left: 5rem"><b>PERFORMA</b></h4>
@@ -377,17 +377,18 @@
 							</div>
 							</div>	
 									
-<div class="container-fluid" style="margin-top:-5rem">
+<div class="container-fluid" style="margin-top:-8rem; ">
+	<h1 class="text-center" style="margin-bottom: 2rem"><b>Gallery</b></h1>
 	<div class=" row">
 	
-			<img class=" col-md-3  img-thumbnail" src="assets/img/diagnosa.jpg" id="potos" style="height: 75%;"></img>
-			<img class=" col-md-3  img-thumbnail" src="assets/img/diagnosa.jpg" id="potos2" style="height: 75%;"></img>
-			<img class=" col-md-3  img-thumbnail" src="assets/img/diagnosa.jpg" id="potos3" style="height: 75%;"></img>
-			<img class=" col-md-3  img-thumbnail" src="assets/img/diagnosa.jpg" id="potos3" style="height: 75%;"></img>
-			<img class=" col-md-3  img-thumbnail" src="assets/img/diagnosa.jpg" id="potos3" style="height: 75%;"></img>
-			<img class=" col-md-3  img-thumbnail" src="assets/img/diagnosa.jpg" id="potos3" style="height: 75%;"></img>
-			<img class=" col-md-3  img-thumbnail" src="assets/img/diagnosa.jpg" id="potos3" style="height: 75%;"></img>
-			<img class=" col-md-3  img-thumbnail" src="assets/img/diagnosa.jpg" id="potos3" style="height: 75%;"></img>
+			<img class=" col-md-3  img-thumbnail" src="assets/img/bengkel1.jpg" id="potos" style="height: 75%;"></img>
+			<img class=" col-md-3  img-thumbnail" src="assets/img/bengkel2.jpg" id="potos2" style="height: 75%;"></img>
+			<img class=" col-md-3  img-thumbnail" src="assets/img/bengkel3.jpg" id="potos3" style="height: 75%;"></img>
+			<img class=" col-md-3  img-thumbnail" src="assets/img/bengkel4.jpg" id="potos3" style="height: 75%;"></img>
+			<img class=" col-md-3  img-thumbnail" src="assets/img/bengkel1.jpg" id="potos3" style="height: 75%;"></img>
+			<img class=" col-md-3  img-thumbnail" src="assets/img/bengkel4.jpg" id="potos3" style="height: 75%;"></img>
+			<img class=" col-md-3  img-thumbnail" src="assets/img/bengkel2.jpg" id="potos3" style="height: 75%;"></img>
+			<img class=" col-md-3  img-thumbnail" src="assets/img/bengkel3.jpg" id="potos3" style="height: 75%;"></img>
 
 
 			
@@ -403,7 +404,7 @@
     <div class="modal-dialog modal-lg">
       	<div class="modal-content">
         	<div class="modal-header text-center" style="background-color: orange">
-          		<h4 class="modal-title" style="color: white"> <b> About </b>| Pak Mull Bengkel</h4>
+          		<h4 class="modal-title" style="color: white"> <b>Data : </b>| Pak Mull Bengkel</h4>
         	</div>
 	        <div class="modal-body">
 	          	<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -442,12 +443,12 @@
 				<h4 class="modal-title" style="color: white">
 					<b> About </b>| Pak Mull Bengkel</h4>
 			</div>
-			<div class="modal-body">
-				<span class="fa fa-star checked"></span>
-				<span class="fa fa-star checked"></span>
-				<span class="fa fa-star checked"></span>
-				<span class="fa fa-star"></span>
-				<span class="fa fa-star"></span>
+			<div class="modal-body text-center" >
+				<span>★</span>
+				<span>★</span>
+				<span>★</span>
+				<span>★</span>
+				<span>★</span>
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
