--- a/OBENGKU-WEB/diagnosa.html
+++ b/OBENGKU-WEB/diagnosa.html
@@ -1,11 +1,10 @@
 <html>
     <header>
       
-
 <meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale = 1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0,  shrink-to-fit=no">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>Injection diagnostic Tool</title>
+<title>Mr Bengkel</title>
 <link rel="icon" href="assets/img/icon.png">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" media="screen" href="assets/css/bootstrap.css" />
@@ -16,8 +15,6 @@
 <script src="assets\js\bootstrap.min.js"></script>
 <script src="assets\js\fade.js"></script>
 <script class="cssdeck" src="assets\js\jquery.min.js"></script>
-    <script src="assets/js/Chart.js" type="text/javascript"></script>
-    <script src="assets/js/jquery.min.js" type="text/javascript"></script>
 
 
  <!-- scrip diagnosa -->
@@ -227,7 +224,7 @@
 </nav>
 
 
-</div>
+
 <div id="loadingtime" style=" background-color: black; opacity:0,2;">
     <div id="loader"></div>
 </div>
