--- a/OBENGKU-WEB/dashboard.html
+++ b/OBENGKU-WEB/dashboard.html
@@ -196,13 +196,13 @@
 					<a class="nav-link " href="index.html">HOME</a>
 				</li>
 				<li class="nav-item warna">
-					<a class="nav-link" href="index.html">SERVICE</a>
+					<a class="nav-link" href="maps.html">SERVICE</a>
 				</li>
 				<li class="nav-item warna">
-					<a class="nav-link" href="#">CONTACT</a>
+					<a class="nav-link" href="#foot">CONTACT</a>
 				</li>
 				<li class="nav-item warna">
-					<a class="nav-link" href="#">ABOUT</a>
+					<a class="nav-link" href="about.html">ABOUT</a>
 				</li>
 				<li class="col">
 					<a class="nav-link" href="#"> </a>
@@ -460,7 +460,7 @@
 
 
 
-<div class="footer" style=" background-color:#474443;margin-top: 10rem">
+<div class="footer" id="foot" style=" background-color:#474443;margin-top: 10rem">
 	<div class="container-fluid" style=" background-color:#474443;">
 		<div class="row">
 			<div class="col-3">
