--- a/OBENGKU-WEB/tips.html
+++ b/OBENGKU-WEB/tips.html
@@ -74,16 +74,16 @@
         <div class="collapse navbar-collapse " id="collapsibleNavbar">
             <ul class="navbar-nav" style="">
                 <li class="nav-item warna ">
-                    <a class="nav-link " href="#">HOME</a>
+                    <a class="nav-link " href="index.html">HOME</a>
                 </li>
                 <li class="nav-item warna">
-                    <a class="nav-link" href="#">SERVICE</a>
+                    <a class="nav-link" href="maps.html">SERVICE</a>
                 </li>
                 <li class="nav-item warna">
                     <a class="nav-link" href="#">CONTACT</a>
                 </li>
                 <li class="nav-item warna">
-                    <a class="nav-link" href="#">ABOUT</a>
+                    <a class="nav-link" href="about.html">ABOUT</a>
                 </li>
                 <li class="col">
                     <a class="nav-link" href="#">    </a>
