--- a/OBENGKU-WEB/diagnosa.html
+++ b/OBENGKU-WEB/diagnosa.html
@@ -202,16 +202,16 @@
     <div class="collapse navbar-collapse " id="collapsibleNavbar">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item warna ">
-                <a class="nav-link " href="#">HOME</a>
+                <a class="nav-link " href="index.html">HOME</a>
             </li>
             <li class="nav-item warna">
-                <a class="nav-link" href="#">SERVICE</a>
+                <a class="nav-link" href="maps.html">SERVICE</a>
             </li>
             <li class="nav-item warna">
-                <a class="nav-link" href="#">CONTACT</a>
+                <a class="nav-link" href="#foot">CONTACT</a>
             </li>
             <li class="nav-item warna">
-                <a class="nav-link" href="#">ABOUT</a>
+                <a class="nav-link" href="about.html">ABOUT</a>
             </li>
             <li class="col">
                 <a class="nav-link" href="#"> </a>
@@ -311,7 +311,7 @@
         </div>
         <!-- footer -->
 
-<div class="footer" style=" background-color:#474443;margin-top: -2rem">
+<div class="footer" id="foot" style=" background-color:#474443;margin-top: -2rem">
     <div class="container-fluid">
         <div class="row">
             <div class="col-3">
