--- a/OBENGKU-WEB/index.html
+++ b/OBENGKU-WEB/index.html
@@ -26,7 +26,7 @@
         <div class="collapse navbar-collapse " id="collapsibleNavbar">
             <ul class="navbar-nav" style="">
                 <li class="nav-item warna ">
-                    <a class="nav-link " href="#">HOME</a>
+                    <a class="nav-link " href="index.html">HOME</a>
                 </li>
                 <li class="nav-item warna">
                     <a class="nav-link" href="#layanan">SERVICE</a>
