--- a/OBENGKU-WEB/login.html
+++ b/OBENGKU-WEB/login.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -144,13 +143,13 @@
                     <a class="nav-link " href="index.html">HOME</a>
                 </li>
                 <li class="nav-item warna">
-                    <a class="nav-link" href="index.html">SERVICE</a>
+                    <a class="nav-link" href="maps.html">SERVICE</a>
                 </li>
                 <li class="nav-item warna">
-                    <a class="nav-link" href="#">CONTACT</a>
+                    <a class="nav-link" href="#foot">CONTACT</a>
                 </li>
                 <li class="nav-item warna">
-                    <a class="nav-link" href="#">ABOUT</a>
+                    <a class="nav-link" href="about.html">ABOUT</a>
                 </li>
                 <li class="col">
                     <a class="nav-link" href="#">    </a>
@@ -190,7 +189,7 @@
 	</div>
 	
 	
-<div class="footer" style=" background-color:#474443;margin-top: 4rem">
+<div class="footer" id="foot" style=" background-color:#474443;margin-top: 4rem">
     <div class="container-fluid">
         <div class="row">
             <div class="col-3">
