--- a/OBENGKU-WEB/maps.html
+++ b/OBENGKU-WEB/maps.html
@@ -27,16 +27,16 @@
                 <div class="collapse navbar-collapse " id="collapsibleNavbar">
                     <ul class="navbar-nav" style="">
                         <li class="nav-item warna ">
-                            <a class="nav-link " href="#">HOME</a>
+                            <a class="nav-link " href="index.html">HOME</a>
                         </li>
                         <li class="nav-item warna">
-                            <a class="nav-link" href="#">SERVICE</a>
+                            <a class="nav-link" href="maps.html">SERVICE</a>
                         </li>
                         <li class="nav-item warna">
-                            <a class="nav-link" href="#">CONTACT</a>
+                            <a class="nav-link" href="#foot">CONTACT</a>
                         </li>
                         <li class="nav-item warna">
-                            <a class="nav-link" href="#">ABOUT</a>
+                            <a class="nav-link" href="about.html">ABOUT</a>
                     </ul>
                 </div>
             </nav>
@@ -208,7 +208,7 @@
                     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBkHLeQsyxikJxATBG3Y5Kq8z7KaJ7MAG0&callback=myMap"></script>
 
                 
-        <div class="footer" style=" background-color:#474443;margin-top:rem">
+        <div class="footer" id="foot" style=" background-color:#474443;margin-top:rem">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-3">
