--- a/OBENGKU-WEB/daftar.html
+++ b/OBENGKU-WEB/daftar.html
@@ -195,7 +195,7 @@
 	<div class="strength-meter-fill" data-strength="{{passwordStrength}}"></div>
 </div>
 
-							<input type="submit" name="submit" class="submit btn-warning" value="submit" href="https://facebook.com" alert="Your Registration Success">
+							<input type="submit" name="DAFTAR" class="submit btn-warning" value="DAFTAR" alert="Your Registration Success">
 							
 							<!-- password strengh -->
 
