--- a/OBENGKU-WEB/login.html
+++ b/OBENGKU-WEB/login.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Login</title>
- <meta charset="utf-8" />
-   <meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Mr Bengkel</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/bootstrap.css" />  
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0,  shrink-to-fit=no">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>Mr Bengkel</title>
+<link rel="icon" href="assets/img/icon.png">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" type="text/css" media="screen" href="assets/css/bootstrap.css" />
+
 <link rel="stylesheet" href="assets\css\home_fix.css">
- <script src="assets\js\jquery-3.3.1.min.js"></script>
+<!-- <script src="//code.jquery.com/jquery-latest.min.js" type="text/javascript"></script> -->
+<script src="assets\js\jquery-3.3.1.min.js"></script>
 <script src="assets\js\bootstrap.min.js"></script>
 <script src="assets\js\fade.js"></script>
-<script class="cssdeck" src="assets\js\jquery.min.js"></script> 
+<script class="cssdeck" src="assets\js\jquery.min.js"></script>
 <script src='https://www.google.com/recaptcha/api.js'></script>
-	<script src="assets\js\angular.min.js"></script>
+	
 	<style type="text/css">
 			.kotak
 			{
