--- a/OBENGKU-WEB/tips.html
+++ b/OBENGKU-WEB/tips.html
@@ -80,7 +80,7 @@
                     <a class="nav-link" href="maps.html">SERVICE</a>
                 </li>
                 <li class="nav-item warna">
-                    <a class="nav-link" href="#">CONTACT</a>
+                    <a class="nav-link" href="#footer">CONTACT</a>
                 </li>
                 <li class="nav-item warna">
                     <a class="nav-link" href="about.html">ABOUT</a>
@@ -116,11 +116,11 @@
 			  			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 			  			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			  			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-			  		</p>
+			  		</p><b>
 			    	Check to show more:
 			    	<input type="checkbox" ng-model="myVar">
 			  	</form>
-			  	<p ng-show="myVar">
+			</b><p ng-show="myVar">
 			  		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			  		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			  		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -160,11 +160,11 @@
 			  			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 			  			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			  			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-			  		</p>
+			  		</p><b>
 			    	Check to show more:
 			    	<input type="checkbox" ng-model="myVar2">
 			  	</form>
-			  	<p ng-show="myVar2">
+			</b><p ng-show="myVar2">
 			  		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			  		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			  		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -204,11 +204,11 @@
 			  			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 			  			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			  			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-			  		</p>
+			  		</p><b>
 			    	Check to show more:
-			    	<input type="checkbox" ng-model="myVar2">
+			    	<input type="checkbox" ng-model="myVar3">
 			  	</form>
-			  	<p ng-show="myVar2">
+			</b><p ng-show="myVar3">
 			  		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			  		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			  		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -233,41 +233,43 @@
 	</div>	
 </div>
 
+<div class="footer" id="footer" style=" background-color:#474443;margin-top: -8rem">
+	<div class="container-fluid" style="background-color:#474443">
+		<div class="row">
+			<div class="col-3">
+				<img src="assets/img/logo_footer.png" style="width:50vh; height:15vh;"></img>
+			</div>
+			<div class="col-3 " style="color: white; margin-left:10px;">
+				<h1>PERUSAHAAN</h1>
+				<h4> Tentang Kami</h4>
+				<h4>Media</h4>
+				<a href="https://id-id.facebook.com/">
+					<img src="assets/img/fb_logo.png" style="height:4vw; margin:35px; margin-top:22%;"></img>
+				</a>
+				<a href="https://www.instagram.com/?hl=id">
+					<img src="assets/img/ig_logo.png" style="height:4vw; margin:35px; margin-top:22%;" </img>
+				</a>
+			</div>
+			<div class="col-3" style="color: white">
+				<h1>LAYANAN</h1>
+				<h4> Service</h4>
+				<h4>Diagnosa</h4>
+				<h4>Tips</h4>
+				<a href="https://twitter.com/?lang=id">
+					<img src="assets/img/tw_logo.png" style="height:4vw; margin:35px; margin-top:10%;"></img>
+				</a>
+				<a href="https://plus.google.com/discover">
+					<img src="assets/img/gg_logo.png" style="height:4vw; margin:35px; margin-top:10%;"></img>
+				</a>
+			</div>
+			<div class="col-23" style="float:right;">
 
-<div class=" jumbotron jumbotron-fluid box_txt" style=" background-color:#474443; margin-top: -5rem">
-<div class="container-fluid">
-    <div class="row" style="">
-    <div class="col-md-3">
-        <img src="assets/img/logo_footer.png" style="width:50vh; height:15vh;">
-    </div>
-        <div class="col-md-3 text-center" style="color: white"><h1>PERUSAHAAN</h1>
-                <h4> Tentang Kami</h4>
-                <h4>Media</h4>
-            <a href="https://id-id.facebook.com/">
-                <img src="assets/img/fb_logo.png" style="height:4vw; margin:13px; margin-top:22%;margin-left:40%;"></img>
-            </a>
-            <a href="https://www.instagram.com/?hl=id">
-                <img src="assets/img/ig_logo.png" style="height:4vw; margin:13px; margin-top:22%;margin-left:5%"></img>
-            </a>
+				<img class="align-bottom" src="assets/img/bg_footer.png" style="width:45vh; height:41vh;">
 
-        </div>
-    <div class="col-md-3 text-center" style="color: white"><h1>LAYANAN</h1>
-        <h4> Service</h4>
-        <h4>Diagnosa</h4>
-        <h4>Tips</h4>
-        <a href="https://twitter.com/?lang=id">
-            <img src="assets/img/tw_logo.png" style="height:4vw; margin:9px; margin-top:10%;"></img>
-        </a>
-        <a href="https://plus.google.com/discover">
-            <img src="assets/img/gg_logo.png" style="height:4vw; margin:9px; margin-top:10%;margin-right:40%"></img>
-        </a>
-    </div>
-        
-    <div class="col-md-3" style="float:right;">
-            
-    	<img  class="align-bottom" src="assets/img/bg_footer.png" style="width:50vh; height:45vh;margin-top:-3rem; margin-left:-1rem;">      
-    </div>
-</div>
-</div>
+
+			</div>
+		</div>
+	</div>
+	</footer>
 </body>
 </html>
